# TestQtSln_v1.0

./: .gitignore  CMakeLists.txt  README.md  TestQt.pro  run_build.bat
Internationalize/: mx_en.ts  mx_ja.ts  mx_zh.qm  mx_zh.ts  run_internationalize.bat
MYUI/: CMakeLists.txt
MYUI/form/: myui.qrc  myui.ui
MYUI/include/: myui.h
MYUI/src/: main.cpp  myui.cpp
Resource/: res.qrc  res.rcc  run_rcc.bat  test.txt  test.xlsx
